Java vectorized